--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon --exec ts-node-esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
+    "p-limit": "^6.1.0",
+    "puppeteer": "^23.1.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.4.0",
+    "@types/node-cache": "^4.2.5",
+    "@types/node-fetch": "^2.6.11",
+    "@types/p-limit": "^2.2.0",
+    "@types/puppeteer": "^7.0.4",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
